[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/level_hud.gd" id="1"]

[node name="LevelHud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Header" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="LevelTitle" type="Label" parent="Margin/VBox/Header"]
unique_name_in_owner = true
layout_mode = 2
text = "Level Title"
theme_override_font_sizes/font_size = 28

[node name="ChapterLabel" type="Label" parent="Margin/VBox/Header"]
unique_name_in_owner = true
layout_mode = 2
text = "Chapter â€”"
theme_override_font_sizes/font_size = 20

[node name="ObjectiveLabel" type="Label" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Objective line"

[node name="BannedLabel" type="Label" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Banned"

[node name="EquationPanel" type="Panel" parent="Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="EquationLabel" type="RichTextLabel" parent="Margin/VBox/EquationPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = false
text = "- Equation A"

[node name="ConditionPanel" type="Panel" parent="Margin/VBox"]
layout_mode = 2

[node name="ConditionVBox" type="VBoxContainer" parent="Margin/VBox/ConditionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4

[node name="ConditionTitle" type="Label" parent="Margin/VBox/ConditionPanel/ConditionVBox"]
layout_mode = 2
text = "Conditions"
theme_override_font_sizes/font_size = 18

[node name="ConditionPlaceholder" type="Label" parent="Margin/VBox/ConditionPanel/ConditionVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "No conditions required."

[node name="ConditionContainer" type="HBoxContainer" parent="Margin/VBox/ConditionPanel/ConditionVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 12

[node name="StatusPanel" type="Panel" parent="Margin/VBox"]
layout_mode = 2

[node name="StatusVBox" type="VBoxContainer" parent="Margin/VBox/StatusPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 6

[node name="ReactionStatus" type="Label" parent="Margin/VBox/StatusPanel/StatusVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "No reactions yet."

[node name="HintLabel" type="Label" parent="Margin/VBox/StatusPanel/StatusVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Press Enter to attempt the first reaction."
